// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shopify shop tag resources fetchShopTags() should fetch shop Customer tags 1`] = `
Object {
  "delete": Array [],
  "get": Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": Object {
        "integration_id": 1,
        "tags_type": "customers",
      },
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/integrations/shopify/shop-tags/customers/list/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [],
}
`;

exports[`Shopify shop tag resources fetchShopTags() should fetch shop Order tags 1`] = `
Object {
  "delete": Array [],
  "get": Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": Object {
        "integration_id": 1,
        "tags_type": "orders",
      },
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/integrations/shopify/shop-tags/orders/list/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [],
}
`;
